--- a/src/components/HomeNoAuth/HeaderNoAuth/styles.module.scss
+++ b/src/components/HomeNoAuth/HeaderNoAuth/styles.module.scss
@@ -1,24 +1,14 @@
 @import "../../../../styles/colors.module.scss";
-
-.ctaSection {
-	background-color: $primaryRed;
+.navContainer {
 	display: flex;
 	justify-content: center;
-	align-items: center;
-	padding: 4px 0px;
-	gap: 30px;
-}
-
-.imgCta {
-	width: 20px;
 }
 
 .nav {
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
-	margin-top: 20px;
-	padding: 0px 10px;
+	padding: 16px 10px;
 }
 
 .imgLogoNav {
