--- a/src/components/PresentationSection/styles.module.scss
+++ b/src/components/PresentationSection/styles.module.scss
@@ -16,12 +16,12 @@
 
 .title {
 	font-size: 2.5rem;
-	font-weight: bold;
+	font-weight: 800;
 	line-height: 3rem;
 }
 .description {
 	font-size: 1.25rem;
-	color: $lightGray;
+	color: $secondaryGray;
 	margin: 20px 0px 40px 0px;
 }
 .linkCta {
@@ -42,7 +42,7 @@
 	}
 	&:hover {
 		border-color: $secondaryRed;
-		color: $lightGray;
+		color: $secondaryGray;
 		background-color: transparent;
 	}
 }
