--- a/styles/HomeNoAuth.module.scss
+++ b/styles/HomeNoAuth.module.scss
@@ -1,5 +1,5 @@
 .sectionBackground {
-	background-image: linear-gradient(to bottom, #8b8b8b1a, #151515),
+	background-image: linear-gradient(to top, #151515 0, #1515154c 60%, #151515e4 100%),
 		url("../public/homeNoAuth/backgroundPresentationSection.png");
 	background-position: center;
 	background-size: cover;
