--- a/src/components/HomeNoAuth/CardsSection/styles.module.scss
+++ b/src/components/HomeNoAuth/CardsSection/styles.module.scss
@@ -1,17 +1,18 @@
 @import "../../../../styles/colors.module.scss";
 
 .sectionTitle {
-	font-size: 1.5rem;
-	font-weight: 800;
+	font-size: 2.5rem;
+	font-weight: 700;
 	text-align: center;
 	margin: 50px 0px 64px 0px;
 }
 
 .card {
-	width: 340px;
-	height: 280px;
-	border-radius: 8px;
+	width: 100%;
+	height: auto;
 	padding: 14px;
+	border-radius: 16px;
+	border: 1px solid $lightGray;
 	background-size: cover;
 	display: flex;
 	flex-direction: column;
@@ -30,6 +31,7 @@
 	}
 	&:hover {
 		transform: scale(1.03);
+		border-color: $secondaryRed;
 		.cardTitle {
 			font-size: 1.4rem;
 			margin-left: 8px;
